<resources>
    <string name="app_name">proyecto</string>

    <!--    Text Intro-->
    <string name="slogan">Encuentra y Disfruta\n de toda nuestra\n riqueza artesanal</string>
    <string name="btnIntro">Empezar</string>

    <!--    Texto Login-->
    <string name="txtLogin">INICIAR SESIÓN</string>
    <string name="txtUsuario">Correo Electronico</string>
    <string name="txtContrasena">Contraseña</string>
    <string name="btnLogin">INGRESAR</string>
    <string name="txtOlvide">¿Olvide mi contraseña, </string>
    <string name="txtOlvide2">Recuperar?</string>
    <string name="txtIngresarRedes">Tambien puede ingresar:</string>
    <string name="txtRegistrarseLogin">Sin una cuenta Registrate, <b>AQUI</b>.</string>

    <!--    Texto Registro-->
    <string name="txtRegistro">REGISTRO</string>
    <string name="txtRegLogin">Ya tienes cuenta Inicia Sesión, <b>AQUI</b>.</string>
    <string name="txtNombresReg">Nombres Apellidos</string>
    <string name="txtPassworConfReg">Confirmar Contraseña</string>
    <string name="btnRegistro">REGISTRARME</string>

    <!--    Texto Dashboard-->
    <string name="txtBuscar">Que es lo que buscas?</string>
    <string name="txtBuscarHitn">Buscar...</string>
    <string name="txtVendidas">Las más vendidas</string>
    <string name="txtRelacionados">Nuevas Artesanias</string>

    <!--    Texto Detalle Artesania-->
    <string name="txtDescripcion">Descripción</string>
    <string name="txtArtesano">Artesano</string>

    <!--    Texto Favorito-->
    <string name="txtFavoritoLista">Listado de Favoritos</string>

    <!--    Texto Comprar-->
    <string name="txtCompra">DATOS DE COMPRAS</string>
    <string name="txtComCiudad">Ciudad</string>
    <string name="txtComDireccion">Dirección</string>
    <string name="txtComCantidad">Cantidad</string>
    <string name="txtComTotal">Total</string>
    <string name="txtCombutton">COMPRAR</string>

    <!--    Texto Shop-->
    <string name="txtShop">Listado de Compras</string>

    <!--    Texto Producto Buscado-->
    <string name="txtFloatBtn">Listado de Categorias</string>

    <!--    Texto Categorias-->
    <string name="txtCategorias">Listado de Categorias</string>

    <!--    Texto Perfil-->
    <string name="txtCodigoPerf"><b>CODIGO: </b></string>
    <string name="txtNombresPerf"><b>NOMBRES APELLIDOS: </b></string>
    <string name="txtCorreoPerf"><b>CORREO ELECTRONICO: </b></string>
    <string name="txtRolPerf"><b>ROL: </b></string>
    <string name="txtEstadoPerf"><b>ESTADO: </b></string>
</resources>
