<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/modal_fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/modal_fondo"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/txtCompra"
                android:textAllCaps="true"
                android:textColor="@color/primary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_margin="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7">

                <AutoCompleteTextView
                    android:id="@+id/AutoCompraCiudad"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/input_estilo"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/txtComCiudad"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/txtBuyDireccion"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/input_estilo"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/txtComDireccion"
                android:inputType="text"
                android:padding="20dp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                app:layout_constraintVertical_bias="0.036" />

            <EditText
                android:id="@+id/txtBuyCantidad"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/input_estilo"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/txtComCantidad"
                android:inputType="text|number"
                android:padding="20dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtBuyDireccion"
                app:layout_constraintVertical_bias="0.036" />

            <EditText
                android:id="@+id/txtBuyTotal"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/input_estilo"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/txtComTotal"
                android:inputType="text|number"
                android:padding="20dp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtBuyCantidad"
                app:layout_constraintVertical_bias="0.036" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBuy"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/btn_intro_fondo"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/txtCombutton"
                android:textColor="@color/primary"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtBuyTotal" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>