<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegistroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="700dp"
                android:background="@drawable/degradado_fondo">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="420dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="74dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.555"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ayarte_logo_white" />


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/txtRegistro"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                <EditText
                    android:id="@+id/txtNombreReg"
                    android:layout_width="320dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/input_estilo"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/txtNombresReg"
                    android:inputType="text"
                    android:padding="20dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:layout_constraintVertical_bias="0.036" />

                <EditText
                    android:id="@+id/txtCorreoReg"
                    android:layout_width="320dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/input_estilo"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/txtUsuario"
                    android:inputType="textEmailAddress"
                    android:padding="20dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtNombreReg" />

                <EditText
                    android:id="@+id/txtPasswordReg"
                    android:layout_width="320dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/input_estilo"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/txtContrasena"
                    android:inputType="textPassword"
                    android:padding="20dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtCorreoReg" />

                <EditText
                    android:id="@+id/txtPasswordConfReg"
                    android:layout_width="320dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/input_estilo"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/txtPassworConfReg"
                    android:inputType="textPassword"
                    android:padding="20dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtPasswordReg" />


                <TextView
                    android:id="@+id/btnLoginReg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="32dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/txtRegLogin"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="145dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRegistroReg"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_intro_fondo"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/btnRegistro"
                    android:textColor="@color/primary"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>